Update:  Fixed White Space on Mobile View

--- a/Main-Nav.css
+++ b/Main-Nav.css
@@ -98,7 +98,6 @@ a.nav-link {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 10px;
   }
 
   .nav-bar-links a.nav-link {
